@@ -144,11 +144,41 @@ namespace scene
 		//! Get the currently used ID for identification of changes.
 		/** This shouldn't be used for anything outside the VideoDriver. */
 		virtual u32 getChangedID_Index() const = 0;
+
+		//! Describe what kind of primitive geometry is used by the meshbuffer
+		/** Note: Default is EPT_TRIANGLES. Using other types is fine for rendering. 
+		But meshbuffer manipulation functions might expect type EPT_TRIANGLES
+		to work correctly. Also mesh writers will generally fail (badly!) with other 
+		types than EPT_TRIANGLES. */
+		virtual void setPrimitiveType(E_PRIMITIVE_TYPE type) = 0;
+
+		//! Get the kind of primitive geometry which is used by the meshbuffer
+		virtual E_PRIMITIVE_TYPE getPrimitiveType() const = 0;
+
+		//! Calculate how many geometric primitives are used by this meshbuffer
+		virtual u32 getPrimitiveCount() const
+		{
+			u32 indexCount = getIndexCount();
+			switch (getPrimitiveType())
+			{
+                case scene::EPT_POINTS:	        return indexCount;
+                case scene::EPT_LINE_STRIP:     return indexCount-1;
+                case scene::EPT_LINE_LOOP:      return indexCount-1;
+                case scene::EPT_LINES:          return indexCount/2;
+                case scene::EPT_TRIANGLE_STRIP: return (indexCount-2)/3;
+                case scene::EPT_TRIANGLE_FAN:   return (indexCount-2)/3;
+                case scene::EPT_TRIANGLES:      return indexCount/3;
+                case scene::EPT_QUAD_STRIP:     return (indexCount-2)/4;
+                case scene::EPT_QUADS:          return indexCount/4;
+                case scene::EPT_POLYGON:        return indexCount-1;
+                case scene::EPT_POINT_SPRITES:  return indexCount;
+			}
+			return 0;
+		}
+
 	};
 
 } // end namespace scene
 } // end namespace irr
 
 #endif
-
-
